@@ -4,6 +4,7 @@ ver 1.6.1 (04/13/2008)
  Changed: 	_update method refactored.
  Changed: 	Updated to Prototype 1.6.0.1 and Script.aculo.us 1.8.1
  Changed: 	Removed Effect.ScaleBy. Using Effect.Morph. Code changed respectively.
+ Changed: 	_insertContent and _putContent methods refactored. Duplicate code removed.
 
  Fixed: 	Fixed double tabbing in forms for Opera and other browsers [#199]
  Fixed: 	Any characters are now accepted to type in form in Safari/WebKit [#201]
